--- a/data-service/src/main/resources/application.yml
+++ b/data-service/src/main/resources/application.yml
@@ -5,3 +5,11 @@ spring:
 server:
   port: 8110
 
+springfox:
+  documentation:
+    openApi:
+      v3:
+        path: /hwtracker/documentation/v3/api-docs
+    swagger:
+      v2:
+        path: /hwtracker/documentation/v2/api-docs
