WIP scanner service added controller for tasks

--- a/data-service/src/main/resources/application.yml
+++ b/data-service/src/main/resources/application.yml
@@ -2,6 +2,8 @@ spring:
   data:
     mongodb:
       uri: mongodb://localhost:27017/hwtracker
+  application:
+    name: hwtracker-data-core
 server:
   port: 8110
 
