--- a/homework-scanner-service/build.gradle
+++ b/homework-scanner-service/build.gradle
@@ -7,6 +7,11 @@ plugins {
 group 'com.regulyator'
 version '1.0-SNAPSHOT'
 
+ext {
+    set('springCloudVersion', "2020.0.3")
+}
+
+
 configurations {
     compileOnly {
         extendsFrom annotationProcessor
@@ -22,10 +27,17 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.modelmapper:modelmapper:2.4.2'
     implementation 'io.springfox:springfox-boot-starter:3.0.0'
+    implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
     implementation 'io.springfox:springfox-swagger-ui:2.9.2'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
+}
+
+dependencyManagement {
+    imports {
+        mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
+    }
 }
 
 test {
