--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,6 @@
 rootProject.name = 'students-homework-tracker'
 include 'data-service'
+include 'data-service-client'
 include 'homework-scanner-service'
+
+
