--- a/settings.gradle
+++ b/settings.gradle
@@ -1,6 +1,7 @@
 rootProject.name = 'students-homework-tracker'
-include 'data-service'
-include 'data-service-client'
-include 'homework-scanner-service'
+include 'data-service:data-service-server'
+include 'data-service:data-service-client'
+include 'homework-scanner-service:homework-scanner-service-server'
+include 'homework-scanner-service:homework-scanner-service-client'
 
 
