--- a/settings.gradle
+++ b/settings.gradle
@@ -3,5 +3,7 @@ include 'data-service:data-service-server'
 include 'data-service:data-service-client'
 include 'homework-scanner-service:homework-scanner-service-server'
 include 'homework-scanner-service:homework-scanner-service-client'
+include 'homework-service:homework-service-server'
+include 'homework-service:homework-service-client'
 
 
