--- a/data-service/data-service-server/build.gradle
+++ b/data-service/data-service-server/build.gradle
@@ -7,6 +7,10 @@ plugins {
 group 'com.regulyator'
 version '1.0-SNAPSHOT'
 
+ext {
+    set('springCloudVersion', "2020.0.3")
+}
+
 configurations {
     compileOnly {
         extendsFrom annotationProcessor
@@ -19,14 +23,22 @@ repositories {
 
 dependencies {
     implementation project(":data-service:data-service-client")
+    implementation project(":homework-service:homework-service-client")
     implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.modelmapper:modelmapper:2.4.2'
     implementation 'io.springfox:springfox-boot-starter:3.0.0'
     implementation 'io.springfox:springfox-swagger-ui:2.9.2'
+    implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
+}
+
+dependencyManagement {
+    imports {
+        mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
+    }
 }
 
 test {
