--- a/data-service/data-service-server/src/main/resources/application.yml
+++ b/data-service/data-service-server/src/main/resources/application.yml
@@ -7,6 +7,19 @@ spring:
 server:
   port: 8110
 
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: ${EUREKA_URI:http://localhost:8761/eureka}
+  instance:
+    prefer-ip-address: true
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health,logfile,metrics,info
+
 springfox:
   documentation:
     openApi:
