--- a/homework-scanner-service/homework-scanner-service-server/build.gradle
+++ b/homework-scanner-service/homework-scanner-service-server/build.gradle
@@ -31,6 +31,8 @@ dependencies {
     implementation 'org.modelmapper:modelmapper:2.4.2'
     implementation 'io.springfox:springfox-boot-starter:3.0.0'
     implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
+    implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
+    implementation 'org.springframework.boot:spring-boot-starter-actuator'
     implementation 'io.springfox:springfox-swagger-ui:2.9.2'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     compileOnly 'org.projectlombok:lombok'
