--- a/homework-service/homework-service-server/src/main/resources/application.yml
+++ b/homework-service/homework-service-server/src/main/resources/application.yml
@@ -3,9 +3,22 @@ spring:
     mongodb:
       uri: mongodb://localhost:27017/hwtracker-homework
   application:
-    name: hwtracker-data-core
+    name: hwtracker-data-homework
 server:
   port: 8130
+
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: ${EUREKA_URI:http://localhost:8761/eureka}
+  instance:
+    prefer-ip-address: true
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health,logfile,metrics,info
 
 springfox:
   documentation:
