--- a/gateway-service/src/main/resources/application.yml
+++ b/gateway-service/src/main/resources/application.yml
@@ -1,9 +1,18 @@
+spring:
+  application:
+    name: gateway-service
+  cloud:
+    gateway:
+      discovery:
+        locator:
+          enabled: true
+
 server:
-  port: 8761
+  port: 8180
+
 eureka:
   client:
-    registerWithEureka: false
-    fetchRegistry: false
-  server:
-    eviction-interval-timer-in-ms: 10000
-    renewal-percent-threshold: 0.85
+    serviceUrl:
+      defaultZone: ${EUREKA_URI:http://localhost:8761/eureka}
+  instance:
+    prefer-ip-address: true
