--- a/settings.gradle
+++ b/settings.gradle
@@ -7,4 +7,5 @@ include 'homework-service:homework-service-server'
 include 'homework-service:homework-service-client'
 include 'discovery-service'
 include 'gateway-service'
+include 'user-service'
 
