--- a/user-service/build.gradle
+++ b/user-service/build.gradle
@@ -17,7 +17,9 @@ ext {
 }
 
 dependencies {
+    implementation project(":data-service:data-service-client")
     implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
+    implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
     implementation 'org.springframework.boot:spring-boot-starter-logging'
