--- a/gateway-service/src/main/resources/application.yml
+++ b/gateway-service/src/main/resources/application.yml
@@ -1,11 +1,26 @@
 spring:
   application:
     name: gateway-service
-  cloud:
-    gateway:
-      discovery:
-        locator:
-          enabled: true
+
+zuul:
+  routes:
+    core:
+      path: /hwtracker/api/data/**
+      serviceId: hwtracker-data-core
+      stripPrefix: false
+    homework:
+      path: /hwtracker/api/homeworks/**
+      serviceId: hwtracker-data-homework
+      stripPrefix: false
+    scanner:
+      path: /hwtracker/api/tracker/**
+      serviceId: hwtracker-scanner
+      stripPrefix: false
+    user:
+      path: /security/**
+      serviceId: user-service
+      stripPrefix: false
+
 
 server:
   port: 8180
