--- a/gateway-service/src/main/resources/application.yml
+++ b/gateway-service/src/main/resources/application.yml
@@ -17,7 +17,7 @@ zuul:
       serviceId: hwtracker-scanner
       stripPrefix: false
     user:
-      path: /security/**
+      path: /hwtracker/api/user/**
       serviceId: user-service
       stripPrefix: false
 
