--- a/gateway-service/build.gradle
+++ b/gateway-service/build.gradle
@@ -14,6 +14,7 @@ repositories {
 
 ext {
     set('springCloudVersion', "Hoxton.RELEASE")
+    set('keyCloackVersion', "15.0.2")
 }
 
 dependencies {
@@ -23,6 +24,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.modelmapper:modelmapper:2.4.2'
+    implementation 'org.keycloak:keycloak-spring-boot-starter'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
     compileOnly 'org.projectlombok:lombok'
@@ -32,6 +34,7 @@ dependencies {
 dependencyManagement {
     imports {
         mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
+        mavenBom "org.keycloak.bom:keycloak-adapter-bom:${keyCloackVersion}"
     }
 }
 
